// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for TalonOne's deleteAudience destination action: all fields 1`] = `""`;

exports[`Testing snapshot for TalonOne's deleteAudience destination action: required fields 1`] = `""`;

exports[`Testing snapshot for TalonOne's deleteAudience destination action: required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "ApiKey-v1 some_api_key",
    ],
    "destination-hostname": Array [
      "I&DFrgw",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for actions-talon-one's deleteAudience destination action: all fields 1`] = `""`;

exports[`Testing snapshot for actions-talon-one's deleteAudience destination action: required fields 1`] = `""`;

exports[`Testing snapshot for actions-talon-one's deleteAudience destination action: required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "ApiKey-v1 some_api_key",
    ],
    "destination-hostname": Array [
      "%(D1Zib7U(",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;
